# automate

./: README.md  pyproject.toml
examples/: config.sample.json
src/autoapply/: __init__.py  agent.py  cli.py  config.py  scoring.py
src/autoapply/browser/: automation.py
src/autoapply/cv/: button_locator.py
src/autoapply/job_sources/: __init__.py  base.py  remotive.py
src/autoapply/utils/: resume_loader.py
tests/: test_agent.py  test_button_locator.py  test_remotive_source.py
